--- a/react-travel-app/src/Components/Images.css
+++ b/react-travel-app/src/Components/Images.css
@@ -55,8 +55,9 @@
 }
 
 @media only screen and (max-width: 500px) {
-    .card {
-
+    .carousel {
+        max-width: 300px;
+        max-height: 600px;
     }
     
 }
